--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,9 @@ android {
         }
     }
 
-    androidExtensions {
-        experimental = true
-    }
+//    androidExtensions {
+//        experimental = true
+//    }
 
     buildTypes {
         /*Produccion*/
