--- a/app/build.gradle
+++ b/app/build.gradle
@@ -286,6 +286,7 @@ dependencies {
 
     //Room
     implementation "androidx.room:room-runtime:$room_version"
+    implementation 'androidx.appcompat:appcompat:1.3.1'
     kapt "androidx.room:room-compiler:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
 
