--- a/app/build.gradle
+++ b/app/build.gradle
@@ -131,15 +131,15 @@ android {
         /*DEV*/
         debug {
             debuggable true
-            buildConfigField("String", "BASE_URL", "\"https://dev.napoleon-chat.com/api/\"")
-            buildConfigField("String", "HOST_URL", "\"dev.napoleon-chat.com\"")
+            buildConfigField("String", "BASE_URL", "\"https://qa.napoleon-chat.com/api/\"")
+            buildConfigField("String", "HOST_URL", "\"qa.napoleon-chat.com\"")
             buildConfigField("String", "STUN_SERVER", "\"stun:stun-prod.napoleon-chat.com:3478\"")
             buildConfigField("String", "TURN_SERVER", "\"turn:turn-prod.napoleon-chat.com:3478\"")
-            buildConfigField("String", "SOCKET_BASE_URL", "\"https://dev.napoleon-chat.com/broadcasting/auth\"")
+            buildConfigField("String", "SOCKET_BASE_URL", "\"https://qa.napoleon-chat.com/broadcasting/auth\"")
             buildConfigField("String", "KEY_OF_KEYS", "\"c6a45c9c226f72230c4fa1bd4d67f06687a97614\"")
-            buildConfigField("boolean", "ENCRYPT_API", "false")
-            buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "false")
-            buildConfigField("String", "PUSHER_KEY", "\"36880baf488e08473554\"")
+            buildConfigField("boolean", "ENCRYPT_API", "true")
+            buildConfigField("boolean", "ENCRYPT_SHARED_PREFERENCES", "true")
+            buildConfigField("String", "PUSHER_KEY", "\"80ce06fc03dc14b7a2dc\"")
         }
     }
 
