--- a/gradle.properties
+++ b/gradle.properties
@@ -10,10 +10,9 @@
 # This option should only be used with decoupled projects. More details, visit
 # http://www.gradle.org/docs/current/userguide/multi_project_builds.html#sec:decoupled_projects
 # org.gradle.parallel=true
-#Thu Mar 26 14:39:50 COT 2020
+#Fri Nov 12 16:25:40 COT 2021
 kotlin.code.style=official
-android.enableJetifier=true
-#org.gradle.jvmargs=-Xmx2048M -Dkotlin.daemon.jvm.options\="-Xmx2048M"
-android.useAndroidX=true
 org.gradle.daemon=false
-org.gradle.jvmargs=-XX:MaxPermSize=1024m -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
+org.gradle.jvmargs=-XX\:MaxPermSize\=1024m -Dkotlin.daemon.jvm.options\="-Xmx1024M" -Xmx1536M -XX\:+HeapDumpOnOutOfMemoryError -Dfile.encoding\=UTF-8
+android.enableJetifier=true
+android.useAndroidX=true
